{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 31,
  "lineage": "ea397325-f24e-a643-71bc-f74bc6b0f0a9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-022e968f6f6cc41dd",
            "domain": "vpc",
            "id": "eipalloc-022e968f6f6cc41dd",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-230-40-130.compute-1.amazonaws.com",
            "public_ip": "3.230.40.130",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "final-project-natgw"
            },
            "tags_all": {
              "Name": "final-project-natgw"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0588935a949f9ff17",
            "arn": "arn:aws:ec2:us-east-1:718575755741:instance/i-0324c265eb91d43ea",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0324c265eb91d43ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "final-project-staging",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e28cbfdf0c86283f",
            "private_dns": "ip-10-200-0-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.200.0.50",
            "public_ip": "3.93.33.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-094f218e24a525ec7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ecf59500a9cadd75"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09f41b1a63921c4cc",
            "tags": {
              "Name": "final-project-staging-bastion",
              "assignment": "FINAL",
              "env": "staging"
            },
            "tags_all": {
              "Name": "final-project-staging-bastion",
              "assignment": "FINAL",
              "env": "staging"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ecf59500a9cadd75"
            ]
          },
          "dependencies": [
            "aws_key_pair.web_key",
            "aws_security_group.bastion_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_ami.latest_amazon_linux",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:718575755741:internet-gateway/igw-01beac26853765b18",
            "id": "igw-01beac26853765b18",
            "owner_id": "718575755741",
            "tags": {
              "Name": "final-project-igw",
              "assignment": "FINAL"
            },
            "tags_all": {
              "Name": "final-project-igw",
              "assignment": "FINAL"
            },
            "vpc_id": "vpc-0758fef827eae7d0b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:718575755741:loadbalancer/app/public-alb/ff294d5afb041d8b",
            "arn_suffix": "app/public-alb/ff294d5afb041d8b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "public-alb-1078840923.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:718575755741:loadbalancer/app/public-alb/ff294d5afb041d8b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "public-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09544383e9be0e9d0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02f137f99f40f968b"
              },
              {
                "subnet_id": "subnet-09f41b1a63921c4cc"
              },
              {
                "subnet_id": "subnet-0ef3b1c2f17266426"
              }
            ],
            "subnets": [
              "subnet-02f137f99f40f968b",
              "subnet-09f41b1a63921c4cc",
              "subnet-0ef3b1c2f17266426"
            ],
            "vpc_id": "vpc-0758fef827eae7d0b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:718575755741:listener/app/public-alb/ff294d5afb041d8b/361270ded3af16a5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:718575755741:targetgroup/lb-target-group/32bf1c67aacffb44",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:718575755741:listener/app/public-alb/ff294d5afb041d8b/361270ded3af16a5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:718575755741:loadbalancer/app/public-alb/ff294d5afb041d8b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.lb_target_group",
            "aws_security_group.alb_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:718575755741:targetgroup/lb-target-group/32bf1c67aacffb44",
            "arn_suffix": "targetgroup/lb-target-group/32bf1c67aacffb44",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:718575755741:targetgroup/lb-target-group/32bf1c67aacffb44",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0758fef827eae7d0b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-022e968f6f6cc41dd",
            "association_id": "eipassoc-03cfe5eb0ef7fe545",
            "connectivity_type": "public",
            "id": "nat-0df4f8e2bd64e9895",
            "network_interface_id": "eni-09a6d5c72f2ea6332",
            "private_ip": "10.200.0.176",
            "public_ip": "3.230.40.130",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09f41b1a63921c4cc",
            "tags": {
              "Name": "final-project-natgw"
            },
            "tags_all": {
              "Name": "final-project-natgw"
            }
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ba92c5a3f9a78b851080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0df4f8e2bd64e9895",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ba92c5a3f9a78b85",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:718575755741:route-table/rtb-0ba92c5a3f9a78b85",
            "id": "rtb-0ba92c5a3f9a78b85",
            "owner_id": "718575755741",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "final-project-route-private-route_table",
              "Tier": "Private"
            },
            "tags_all": {
              "Name": "final-project-route-private-route_table",
              "Tier": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0758fef827eae7d0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:718575755741:route-table/rtb-006716abef810b1dd",
            "id": "rtb-006716abef810b1dd",
            "owner_id": "718575755741",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01beac26853765b18",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "final-project-route-public-route_table"
            },
            "tags_all": {
              "Name": "final-project-route-public-route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0758fef827eae7d0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077f7e978e7123bc8",
            "route_table_id": "rtb-0ba92c5a3f9a78b85",
            "subnet_id": "subnet-02673188b8b547f80"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1e4657813ee75b4",
            "route_table_id": "rtb-0ba92c5a3f9a78b85",
            "subnet_id": "subnet-008bb4592e6aab753"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01011075a058c91a5",
            "route_table_id": "rtb-0ba92c5a3f9a78b85",
            "subnet_id": "subnet-07bfd4e4557c1daaa"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08778bbf6c3594c6b",
            "route_table_id": "rtb-006716abef810b1dd",
            "subnet_id": "subnet-09f41b1a63921c4cc"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fbae5fd69eacffa",
            "route_table_id": "rtb-006716abef810b1dd",
            "subnet_id": "subnet-02f137f99f40f968b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0616736435a05e288",
            "route_table_id": "rtb-006716abef810b1dd",
            "subnet_id": "subnet-0ef3b1c2f17266426"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:718575755741:security-group/sg-09544383e9be0e9d0",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09544383e9be0e9d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-security-group",
            "name_prefix": "",
            "owner_id": "718575755741",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0758fef827eae7d0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:718575755741:security-group/sg-0c4e5438021d11cb3",
            "description": "ASG Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4e5438021d11cb3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09544383e9be0e9d0"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09544383e9be0e9d0"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09544383e9be0e9d0"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "asg-security-group",
            "name_prefix": "",
            "owner_id": "718575755741",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0758fef827eae7d0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:718575755741:security-group/sg-0ecf59500a9cadd75",
            "description": "Allow SSH, HTTP/S inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ecf59500a9cadd75",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_ssh, HTTP/S",
            "name_prefix": "",
            "owner_id": "718575755741",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "final-project-staging-bastion-sg",
              "assignment": "FINAL",
              "env": "staging"
            },
            "tags_all": {
              "Name": "final-project-staging-bastion-sg",
              "assignment": "FINAL",
              "env": "staging"
            },
            "timeouts": null,
            "vpc_id": "vpc-0758fef827eae7d0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:718575755741:security-group/sg-01de1cec2967cb5de",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01de1cec2967cb5de",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ecf59500a9cadd75"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ecf59500a9cadd75"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ecf59500a9cadd75"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http_ssh",
            "name_prefix": "",
            "owner_id": "718575755741",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "final-project-staging-sg",
              "assignment": "FINAL",
              "env": "staging"
            },
            "tags_all": {
              "Name": "final-project-staging-sg",
              "assignment": "FINAL",
              "env": "staging"
            },
            "timeouts": null,
            "vpc_id": "vpc-0758fef827eae7d0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:718575755741:subnet/subnet-02673188b8b547f80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.200.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02673188b8b547f80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "718575755741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "final-project-private-subnet",
              "Tier": "Private",
              "assignment": "FINAL"
            },
            "tags_all": {
              "Name": "final-project-private-subnet",
              "Tier": "Private",
              "assignment": "FINAL"
            },
            "vpc_id": "vpc-0758fef827eae7d0b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:718575755741:subnet/subnet-008bb4592e6aab753",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.200.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008bb4592e6aab753",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "718575755741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "final-project-private-subnet",
              "Tier": "Private",
              "assignment": "FINAL"
            },
            "tags_all": {
              "Name": "final-project-private-subnet",
              "Tier": "Private",
              "assignment": "FINAL"
            },
            "vpc_id": "vpc-0758fef827eae7d0b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:718575755741:subnet/subnet-07bfd4e4557c1daaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.200.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07bfd4e4557c1daaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "718575755741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "final-project-private-subnet",
              "Tier": "Private",
              "assignment": "FINAL"
            },
            "tags_all": {
              "Name": "final-project-private-subnet",
              "Tier": "Private",
              "assignment": "FINAL"
            },
            "vpc_id": "vpc-0758fef827eae7d0b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:718575755741:subnet/subnet-09f41b1a63921c4cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.200.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f41b1a63921c4cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "718575755741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "final-project-public-subnet-0",
              "assignment": "FINAL"
            },
            "tags_all": {
              "Name": "final-project-public-subnet-0",
              "assignment": "FINAL"
            },
            "vpc_id": "vpc-0758fef827eae7d0b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:718575755741:subnet/subnet-02f137f99f40f968b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.200.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f137f99f40f968b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "718575755741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "final-project-public-subnet-1",
              "assignment": "FINAL"
            },
            "tags_all": {
              "Name": "final-project-public-subnet-1",
              "assignment": "FINAL"
            },
            "vpc_id": "vpc-0758fef827eae7d0b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:718575755741:subnet/subnet-0ef3b1c2f17266426",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.200.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef3b1c2f17266426",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "718575755741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "final-project-public-subnet-2",
              "assignment": "FINAL"
            },
            "tags_all": {
              "Name": "final-project-public-subnet-2",
              "assignment": "FINAL"
            },
            "vpc_id": "vpc-0758fef827eae7d0b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:718575755741:vpc/vpc-0758fef827eae7d0b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.200.0.0/16",
            "default_network_acl_id": "acl-009109f91960174d9",
            "default_route_table_id": "rtb-0bcc638a63d176a57",
            "default_security_group_id": "sg-029196ee9a2e05db2",
            "dhcp_options_id": "dopt-05e056616b5817113",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0758fef827eae7d0b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bcc638a63d176a57",
            "owner_id": "718575755741",
            "tags": {
              "Name": "final-project-vpc",
              "assignment": "FINAL"
            },
            "tags_all": {
              "Name": "final-project-vpc",
              "assignment": "FINAL"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}